platform-admin/gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: external-http
  annotations:
    networking.gke.io/certmap: CERT_MAP
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  # Ensures no rules from other namespaces can be bound to this listener, used only for HTTP/S redirect
  - name: http-redirect
    protocol: HTTP
    port: 80
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
      namespaces:
        from: Same 
  # HTTPS listener on 443 bound to a specific fqdn that can only be used by dev-team-1
  - name: https-dev-team-1
    hostname: FQDN_1
    protocol: HTTPS
    port: 443
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
      namespaces:
        from: Selector
        selector:
          matchLabels:
            team: dev-team-1
  # HTTPS listener on 443 bound to a specific fqdn that can only be used by dev-team-2
  - name: https-dev-team-2
    hostname: FQDN_2
    protocol: HTTPS
    port: 443
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
      namespaces:
        from: Selector
        selector:
          matchLabels:
            team: dev-team-2
  addresses:
  - type: NamedAddress
    value: IP_NAME
